--- a/laravel/resources/assets/less/colors.less
+++ b/laravel/resources/assets/less/colors.less
@@ -8,6 +8,7 @@
 @bg_page: rgba(225,222,222,1);
 
 @black: rgba(37,33,34,1);
+@lightblack: rgba(49,45,45,1);
 @darkgrey: rgba(66,66,66,1);
 @darkmediumgrey: rgba(82,82,82,1);
 @mediumgrey: rgba(135,135,135,1);
@@ -25,6 +26,8 @@
 @lightpurple: rgba(176,141,181,1);
 @teal: rgba(35,145,146,1); 
 @cobalt: rgba(52,62,112,1);
+@darkcobalt: #326c96;
+@cobalt: #4ba1e0;
 @rust: rgba(148,144,133,1);
 @slateblue: rgba(156,186,204,1);
 @lightblue: rgba(212,233,246,1);
